# httprunner-mubu

./: .gitignore  .travis.yml  README.md  demo.har  demo.yml  locustfile.py  pyproject.toml  test_mubu.py
api/: login_submit.yml
httprunner-demo-mubu/: demo.yml
httprunner-demo-mubu/api/: login_password.yml  login_submit.yml
testcases/: login.yml
