[tool.poetry]
name = "httprunner-mubu"
version = "0.1.0"
description = ""
authors = ["krystal"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.5"
python = "3.6^"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
